# server/docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /
 definitions:
   request.LoginRequest:
     properties:
@@ -32,8 +33,19 @@ definitions:
       username:
         type: string
     type: object
+host: localhost:8080
 info:
-  contact: {}
+  contact:
+    email: blkcor.dev@gmail.com
+    name: blkcor
+    url: https://blkcor.me
+  description: Gin + React 管理系统的 API 文档
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: http://www.swagger.io/terms/
+  title: GRA API文档
+  version: "1.0"
 paths:
   /captcha:
     get:
@@ -51,7 +63,7 @@ paths:
             type: string
       summary: 获取验证码
       tags:
-      - Captcha
+      - 登录相关接口
   /login:
     post:
       consumes:
@@ -91,5 +103,10 @@ paths:
       - ApiKeyAuth: []
       summary: 登录
       tags:
-      - Login
+      - 登录相关接口
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
